...
    "Purple" : {

    },
    "Red" : {

    },
    "Refresh usage" : {

    },
    "Remaining" : {

    },
    "Reset unavailable" : {
...
